--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -188,6 +188,16 @@
                                             </a>
                                         </li>
                                         <li>
+                                            <a class="dropdown-item" asp-controller="RequestManagement" asp-action="Index">
+                                                <i class="fas fa-tasks me-1"></i>Request Management
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="DataFix" asp-action="Index">
+                                                <i class="fas fa-tools me-1"></i>Data Fix Utility
+                                            </a>
+                                        </li>
+                                        <li>
                                             <a class="dropdown-item" asp-controller="RiskLevelSettings" asp-action="Index">
                                                 <i class="fas fa-sliders-h me-1"></i>Risk Level Settings
                                             </a>
